<resources>
    <string name="app_name">Popular Movies</string>
    <string name="default_error_message">An error has occurred</string>
    <string name="io_error">There was a problem connecting to the internet, please check if you have connection</string>
    <string name="title_label">Title:</string>
    <string name="release_date_label">Release Date:</string>
    <string name="rating_label">Rating:</string>
    <string name="overview_label">Overview:</string>
    <string name="sort_by">Sort By:</string>
    <string name="poster">Poster</string>
    <string name="no_trailers_string">There are no trailers available for this movie</string>
    <string name="trailers_label">Trailers:</string>
    <string name="reviews_label">Reviews:</string>
    <string name="no_comments_tool">There are no comments for this video</string>
    <string name="tools_text_comment">Comment</string>
    <string name="tools_text_author">Author:</string>
    <string name="tools_text_site_name">Site Name</string>
    <string name="tools_text_trailer_name">Trailer Name</string>
    <string name="movie_name">Movie Name</string>
    <string name="menu_title_popular">Popular</string>
    <string name="menu_title_toprated">Top Rated</string>
    <string name="manue_title_favorites">Favorites</string>
    <string name="loading_movies">Downloading Movies</string>
    <string-array name="sort_array">
        <item>Popular</item>
        <item>Top Rated</item>
        <item>Favorites</item>
    </string-array>
</resources>
